@@ -1,3 +1,7 @@
+2009-07-04  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/template/using15.C: New.
+
 2009-07-04  Jakub Jelinek  <jakub@redhat.com>
 
 	* gfortran.dg/maxloc_1.f90: New test.
